# docs/swagger.yaml
@@ -690,59 +690,48 @@ paths:
           description: List of all books of user shelf
         401:
           description: Token not found
-  /add_to_shelf/bookId:
-    post:
-      summary: Add book to shelf by book ID
-      tags:
-        - Shelf
-      parameters:
-        - in: path
-          name: bookId
-          schema:
-            type: string
-          required: true
-          description: ID of the book to add to shelf
-      security:
-        - bearerAuth: []
-      responses:
-        200:
-          description: Book added to shelf successfully
-        404:
-          description: Book not found 
-        401:
-          description: Token not found       
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  book:
-                    $ref: '#/components/schemas/Shelf'                
-  /delete_from_shell/:bookId:
-    delete:
-      summary: Delete book by ID from shell
-      security:
-        - bearerAuth: []
-      tags:
-        - Shelf
-      parameters:
-        - in: path
-          name: bookId
-          schema:
-            type: string
-          required: true
-          description: ID of the book to delete
-      responses:
-        200:
-          description: Book deleted successfully from shell
-        404:
-          description: Book not found
-        404:
-          description: User not found
-        401:
-          description: Token not found
+/add_to_shelf/{bookId}:
+  post:
+    summary: Add book to shelf by book ID
+    tags:
+      - Shelf
+    parameters:
+      - in: path
+        name: bookId
+        schema:
+          type: string
+        required: true
+        description: ID of the book to add to shelf
+    security:
+      - bearerAuth: []
+    responses:
+      200:
+        description: Book added to shelf successfully
+      404:
+        description: Book not found 
+      401:
+        description: Token not found               
+/delete_from_shelf/{shelfId}:
+  delete:
+    summary: Delete book by shelf ID from shelf
+    security:
+      - bearerAuth: []
+    tags:
+      - Shelf
+    parameters:
+      - in: path
+        name: shelfId
+        schema:
+          type: string
+        required: true
+        description: ID of the book to delete
+    responses:
+      200:
+        description: Book deleted successfully from shelf
+      404:
+        description: Book or User not found
+      401:
+        description: Token not found
 components:
   schemas:
     RegisterRequest:
